# Swift_VLM_Flow

./: .gitignore  README.md
agent/: README.md  demo_offline.py  pyproject.toml
agent/swift_agent/: __init__.py  agent.py  backend.py  cli.py  example_tools.py  tools.py
agent/tests/: test_agent.py  test_backend.py  test_tools.py
edge-deployment/: Dockerfile  README.md
edge-deployment/benchmark/: README.md  config.py  generate_combined_report.py  metrics.py  report.py  report_generator.py  run_benchmark.py  run_benchmark_trt.py
edge-deployment/benchmark/accuracy/: README.md  accuracy_metrics.py  config_accuracy.py  data_loader_acc.py  run_accuracy_all.sh  run_accuracy_baseline.py  run_accuracy_trt.py
edge-deployment/benchmark/efficiency/: README.md  config.py  data_loader.py  metrics.py  note.md  run_benchmark.py  run_benchmark_baseline.py  run_benchmark_trt.py  run_benchmarks.sh  run_efficiency_all.sh
edge-deployment/benchmark/speculative/: README.md  config_spec.py  env.sh  io_builder.py  output_parser.py  report_fp8_vs_bf16.py  report_spec.py  run_spec_all.sh  run_spec_trt_edge.py  spec_metrics.py
edge-deployment/benchmark/speculative/tests/: test_io_builder.py  test_output_parser.py  test_report_spec.py  test_spec_metrics.py
edge-deployment/docs/: TensorRT.md
edge-deployment/models/: README.md
edge-deployment/results/: baseline_20260509_030136.md
edge-deployment/results/reports/: combined_20260512_173641.md  final_report.md
edge-deployment/scripts/: README.md  build_trt_engines.sh  build_trt_engines_baseline.sh
models/: README.md
(+22 files in other folders)
